TEKA fixed header position and MovieListCard text overflow. Deleted and separated imports.

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -10,7 +10,8 @@
 
     color: rgb(185, 185, 185);
 
-    position: fixed;
+    position: sticky;
+    top: 0;
 
     z-index: 100;
 }
