--- a/src/components/MovieListCard/MovieListCard.module.css
+++ b/src/components/MovieListCard/MovieListCard.module.css
@@ -35,7 +35,6 @@
     padding: 5px 2px;
     font-size: 11px;
 
-    height: 50px;
 
     display: flex;
     flex-direction: column;
@@ -43,5 +42,8 @@
 }
 
 .MovieListCardBottom p {
-
+    max-height: 32px;
+    overflow: hidden;
+    white-space: pre-wrap;
+    text-overflow: ellipsis;
 }
